# pyppyn

./: .bumpversion.cfg  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  Pipfile  README.md  README.rst  appveyor.yml  azure-pipelines.yml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
.pytest_cache/v/cache/: nodeids
pyppyn/: __init__.py  cli.py  logging.conf
requirements/: lint.txt  pip.txt  pytest.txt  test.txt
tests/: test_pyppyn.py
tests/minipippy/: setup.cfg  setup.py
tests/minipippy/src/minipippy/: __init__.py
