# pyup: ignore file

[metadata]
name = pyppyn
description = Python package to dynamically read setup configurations and load dependencies.
version = 0.1dev
author = YakDriver
url = https://github.com/YakDriver/pyppyn
license = Apache Software License 2.0
platforms =
    Linux
    Windows
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities

[options]
install_requires =
    six
packages = pyppyn
include_package_data = True

[options.entry_points]
console_scripts =
    pyppyn = pyppyn.cli:main

[bdist_wheel]
universal = 1

[tool:pytest]
mock_use_standalone_module = true
norecursedirs =
    .git
    .tox
    .env
    __pycache__
    dist
    build
    htmlcov
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -rxEfsw
    --strict
    --doctest-modules
    --doctest-glob=\*.md
    --tb=short